content/_generated-doc/2.7/config/quarkus-native-pkg-native-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-native-pkg-native-config_configuration]]link:#quarkus-native-pkg-native-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.additional-build-args]]`link:#quarkus-native-pkg-native-config_quarkus.native.additional-build-args[quarkus.native.additional-build-args]`

[.description]
--
Comma-separated, additional arguments to pass to the build process. If an argument includes the `,` symbol, it needs to be escaped, e.g. `++\\++,`
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.enable-http-url-handler]]`link:#quarkus-native-pkg-native-config_quarkus.native.enable-http-url-handler[quarkus.native.enable-http-url-handler]`

[.description]
--
If the HTTP url handler should be enabled, allowing you to do URL.openConnection() for HTTP URLs
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.enable-https-url-handler]]`link:#quarkus-native-pkg-native-config_quarkus.native.enable-https-url-handler[quarkus.native.enable-https-url-handler]`

[.description]
--
If the HTTPS url handler should be enabled, allowing you to do URL.openConnection() for HTTPS URLs
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.inline-before-analysis]]`link:#quarkus-native-pkg-native-config_quarkus.native.inline-before-analysis[quarkus.native.inline-before-analysis]`

[.description]
--
If `-H:{plus}InlineBeforeAnalysis` flag will be added to the native-image run
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.headless]]`link:#quarkus-native-pkg-native-config_quarkus.native.headless[quarkus.native.headless]`

[.description]
--
The default value for java.awt.headless JVM option. Switching this option affects linking of awt libraries.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.file-encoding]]`link:#quarkus-native-pkg-native-config_quarkus.native.file-encoding[quarkus.native.file-encoding]`

[.description]
--
Defines the file encoding as in -Dfile.encoding=... Native image runtime uses the host's (i.e. build time) value of file.encoding system property. We intentionally default this to UTF-8 to avoid platform specific defaults to be picked up which can then result in inconsistent behavior in the generated native executable.
--|string 
|`UTF-8`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.add-all-charsets]]`link:#quarkus-native-pkg-native-config_quarkus.native.add-all-charsets[quarkus.native.add-all-charsets]`

[.description]
--
If all character sets should be added to the native image. This increases image size
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.graalvm-home]]`link:#quarkus-native-pkg-native-config_quarkus.native.graalvm-home[quarkus.native.graalvm-home]`

[.description]
--
The location of the Graal distribution
--|string 
|`${GRAALVM_HOME:}`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.java-home]]`link:#quarkus-native-pkg-native-config_quarkus.native.java-home[quarkus.native.java-home]`

[.description]
--
The location of the JDK
--|link:https://docs.oracle.com/javase/8/docs/api/java/io/File.html[File]
 
|`${java.home}`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.native-image-xmx]]`link:#quarkus-native-pkg-native-config_quarkus.native.native-image-xmx[quarkus.native.native-image-xmx]`

[.description]
--
The maximum Java heap to be used during the native image generation
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.debug-build-process]]`link:#quarkus-native-pkg-native-config_quarkus.native.debug-build-process[quarkus.native.debug-build-process]`

[.description]
--
If the native image build should wait for a debugger to be attached before running. This is an advanced option and is generally only intended for those familiar with GraalVM internals
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.publish-debug-build-process-port]]`link:#quarkus-native-pkg-native-config_quarkus.native.publish-debug-build-process-port[quarkus.native.publish-debug-build-process-port]`

[.description]
--
If the debug port should be published when building with docker and debug-build-process is true
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.enable-isolates]]`link:#quarkus-native-pkg-native-config_quarkus.native.enable-isolates[quarkus.native.enable-isolates]`

[.description]
--
If isolates should be enabled
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.enable-fallback-images]]`link:#quarkus-native-pkg-native-config_quarkus.native.enable-fallback-images[quarkus.native.enable-fallback-images]`

[.description]
--
If a JVM based 'fallback image' should be created if native image fails. This is not recommended, as this is functionally the same as just running the application in a JVM
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.auto-service-loader-registration]]`link:#quarkus-native-pkg-native-config_quarkus.native.auto-service-loader-registration[quarkus.native.auto-service-loader-registration]`

[.description]
--
If all META-INF/services entries should be automatically registered
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.dump-proxies]]`link:#quarkus-native-pkg-native-config_quarkus.native.dump-proxies[quarkus.native.dump-proxies]`

[.description]
--
If the bytecode of all proxies should be dumped for inspection
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.container-build]]`link:#quarkus-native-pkg-native-config_quarkus.native.container-build[quarkus.native.container-build]`

[.description]
--
If this build should be done using a container runtime. Unless container-runtime is also set, docker will be used by default. If docker is not available or is an alias to podman, podman will be used instead as the default.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.remote-container-build]]`link:#quarkus-native-pkg-native-config_quarkus.native.remote-container-build[quarkus.native.remote-container-build]`

[.description]
--
If this build is done using a remote docker daemon.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.builder-image]]`link:#quarkus-native-pkg-native-config_quarkus.native.builder-image[quarkus.native.builder-image]`

[.description]
--
The docker image to use to do the image build
--|string 
|`${platform.quarkus.native.builder-image}`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.container-runtime]]`link:#quarkus-native-pkg-native-config_quarkus.native.container-runtime[quarkus.native.container-runtime]`

[.description]
--
The container runtime (e.g. docker) that is used to do an image based build. If this is set then a container build is always done.
--|`docker`, `podman` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.container-runtime-options]]`link:#quarkus-native-pkg-native-config_quarkus.native.container-runtime-options[quarkus.native.container-runtime-options]`

[.description]
--
Options to pass to the container runtime
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.enable-vm-inspection]]`link:#quarkus-native-pkg-native-config_quarkus.native.enable-vm-inspection[quarkus.native.enable-vm-inspection]`

[.description]
--
If the resulting image should allow VM introspection
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.full-stack-traces]]`link:#quarkus-native-pkg-native-config_quarkus.native.full-stack-traces[quarkus.native.full-stack-traces]`

[.description]
--
If full stack traces are enabled in the resulting image
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.enable-reports]]`link:#quarkus-native-pkg-native-config_quarkus.native.enable-reports[quarkus.native.enable-reports]`

[.description]
--
If the reports on call paths and included packages/classes/methods should be generated
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.report-exception-stack-traces]]`link:#quarkus-native-pkg-native-config_quarkus.native.report-exception-stack-traces[quarkus.native.report-exception-stack-traces]`

[.description]
--
If exceptions should be reported with a full stack trace
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.report-errors-at-runtime]]`link:#quarkus-native-pkg-native-config_quarkus.native.report-errors-at-runtime[quarkus.native.report-errors-at-runtime]`

[.description]
--
If errors should be reported at runtime. This is a more relaxed setting, however it is not recommended as it means your application may fail at runtime if an unsupported feature is used by accident.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.reuse-existing]]`link:#quarkus-native-pkg-native-config_quarkus.native.reuse-existing[quarkus.native.reuse-existing]`

[.description]
--
Don't build a native image if it already exists. This is useful if you have already built an image and you want to use Quarkus to deploy it somewhere. Note that this is not able to detect if the existing image is outdated, if you have modified source or config and want a new image you must not use this flag.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.resources.includes]]`link:#quarkus-native-pkg-native-config_quarkus.native.resources.includes[quarkus.native.resources.includes]`

[.description]
--
A comma separated list of globs to match resource paths that should be added to the native image. 
 Use slash (`/`) as a path separator on all platforms. Globs must not start with slash. 
 By default, no resources are included. 
 Example: Given that you have `src/main/resources/ignored.png` and `src/main/resources/foo/selected.png` in your source tree and one of your dependency JARs contains `bar/some.txt` file, with the following configuration quarkus.native.resources.includes = foo/++**++,bar/++**++/++*++.txt  the files `src/main/resources/foo/selected.png` and `bar/some.txt` will be included in the native image, while `src/main/resources/ignored.png` will not be included. 
 Supported glob features   Feature Description   `++*++` Matches a (possibly empty) sequence of characters that does not contain slash (`/`)   `++**++` Matches a (possibly empty) sequence of characters that may contain slash (`/`)   `?` Matches one character, but not slash   `++[++abc++]++` Matches one character given in the bracket, but not slash   `++[++a-z++]++` Matches one character from the range given in the bracket, but not slash   `++[++!abc++]++` Matches one character not named in the bracket; does not match slash   `++[++a-z++]++` Matches one character outside the range given in the bracket; does not match slash   `++{++one,two,three++}++` Matches any of the alternating tokens separated by comma; the tokens may contain wildcards, nested alternations and ranges   `++\++` The escape character   
 Note that there are three levels of escaping when passing this option via `application.properties`:  
 . `application.properties` parser 
 - MicroProfile Config list converter that splits the comma separated list 
 - Glob parser  All three levels use backslash (`++\++`) as the escaping character. So you need to use an appropriate number of backslashes depending on which level you want to escape. 
 Note that Quarkus extensions typically include the resources they require by themselves. This option is useful in situations when the built-in functionality is not sufficient.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.resources.excludes]]`link:#quarkus-native-pkg-native-config_quarkus.native.resources.excludes[quarkus.native.resources.excludes]`

[.description]
--
A comma separated list of globs to match resource paths that should *not* be added to the native image. 
 Use slash (`/`) as a path separator on all platforms. Globs must not start with slash. 
 Please refer to `includes` for details about the glob syntax. 
 By default, no resources are excluded. 
 Example: Given that you have `src/main/resources/red.png` and `src/main/resources/foo/green.png` in your source tree and one of your dependency JARs contains `bar/blue.png` file, with the following configuration quarkus.native.resources.includes = ++**++/++*++.png quarkus.native.resources.excludes = foo/++**++,++**++/green.png  the resource `red.png` will be available in the native image while the resources `foo/green.png` and `bar/blue.png` will not be available in the native image.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.debug.enabled]]`link:#quarkus-native-pkg-native-config_quarkus.native.debug.enabled[quarkus.native.debug.enabled]`

[.description]
--
If debug is enabled and debug symbols are generated. The symbols will be generated in a separate .debug file.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.enable-dashboard-dump]]`link:#quarkus-native-pkg-native-config_quarkus.native.enable-dashboard-dump[quarkus.native.enable-dashboard-dump]`

[.description]
--
Generate the report files for GraalVM Dashboard.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.compression.level]]`link:#quarkus-native-pkg-native-config_quarkus.native.compression.level[quarkus.native.compression.level]`

[.description]
--
The compression level in ++[++1, 10++]++. 10 means *best* Higher compression level requires more time to compress the executable.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.compression.additional-args]]`link:#quarkus-native-pkg-native-config_quarkus.native.compression.additional-args[quarkus.native.compression.additional-args]`

[.description]
--
Allows passing extra arguments to the UPX command line (like --brute). The arguments are comma-separated. The exhaustive list of parameters can be found in link:https://github.com/upx/upx/blob/devel/doc/upx.pod[https://github.com/upx/upx/blob/devel/doc/upx.pod].
--|list of string 
|

|===